[tool.poetry]
name = "zero2former"
version = "0.1.0"
description = "Building transformers from scratch for educational purposes"
authors = ["Pradipta Deb"]
license = "MIT"
readme = "README.md"
packages = [{include = "zero2former"}]

[tool.poetry.dependencies]
python = ">=3.10"
numpy = "^1.26.4"
torch = "^2.2.1"
matplotlib = "^3.8.3"
jupyter = "^1.0.0"
tqdm = "^4.66.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
black = "^24.2.0"
ruff = "^0.3.0"
mypy = "^1.8.0"
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
